--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@trpc/next": "^10.7.0",
     "@trpc/react-query": "^10.7.0",
     "@trpc/server": "^10.7.0",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.1.8",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
