--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,74 @@
   "plugins": ["@typescript-eslint"],
   "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
   "rules": {
-    "@typescript-eslint/consistent-type-imports": "warn"
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "react/jsx-indent": [
+      2,
+      2
+    ],
+    "@typescript-eslint/consistent-type-imports": "warn",
+    "no-trailing-spaces": 2,
+    "no-whitespace-before-property": "error",
+    "space-before-blocks": 2,
+    "space-in-parens": [
+      2,
+      "never"
+    ],
+    "space-before-function-paren": [
+      2,
+      {
+        "anonymous": "always",
+        "named": "never",
+        "asyncArrow": "always"
+      }
+    ],
+    "space-unary-ops": [
+      2,
+      {
+        "words": true,
+        "nonwords": false
+      }
+    ],
+    "space-infix-ops": 2,
+    "no-multi-spaces": 2,
+    "quotes": [
+      "error",
+      "single",
+      {
+        "allowTemplateLiterals": true
+      }
+    ],
+    "jsx-quotes": [
+      "error",
+      "prefer-single"
+    ],
+    "quote-props": [
+      2,
+      "as-needed"
+    ],
+    "sort-imports": [
+      2,
+      {
+        "ignoreCase": true,
+        "ignoreDeclarationSort": true,
+        "ignoreMemberSort": false,
+        "memberSyntaxSortOrder": [
+          "all",
+          "multiple",
+          "single",
+          "none"
+        ]
+      }
+    ],
+    "import/no-named-as-default-member": 1,
+    "import/order": [
+      "error"
+    ]
   }
 }
