--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
       2
     ],
     "@typescript-eslint/consistent-type-imports": "warn",
+    "@typescript-eslint/no-empty-function": "warn",
     "no-trailing-spaces": 2,
     "no-whitespace-before-property": "error",
     "space-before-blocks": 2,
