--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^8.4.2",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "locomotive-scroll": "^4.1.4",
     "markdown-to-jsx": "^7.1.8",
     "next": "13.1.1",
     "react": "18.2.0",
