--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "sass": "^1.57.1",
     "superjson": "1.9.1",
