--- a/package.json
+++ b/package.json
@@ -7,45 +7,46 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "clean": "rm -rf .next"
+    "clean": "rm -rf .next",
+    "update": "next update"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.0",
-    "@tanstack/react-query": "^4.20.0",
-    "@trpc/client": "^10.7.0",
-    "@trpc/next": "^10.7.0",
-    "@trpc/react-query": "^10.7.0",
-    "@trpc/server": "^10.7.0",
-    "@vercel/analytics": "^0.1.8",
-    "framer-motion": "^8.4.2",
-    "fs": "^0.0.1-security",
+    "@prisma/client": "^4.10.1",
+    "@tanstack/react-query": "^4.24.10",
+    "@trpc/client": "^10.12.0",
+    "@trpc/next": "^10.12.0",
+    "@trpc/react-query": "^10.12.0",
+    "@trpc/server": "^10.12.0",
+    "@vercel/analytics": "^0.1.10",
+    "framer-motion": "^8.5.5",
+    "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
-    "markdown-to-jsx": "^7.1.8",
+    "markdown-to-jsx": "^7.1.9",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-intersection-observer": "^9.4.1",
-    "sass": "^1.57.1",
+    "react-intersection-observer": "^9.4.3",
+    "sass": "^1.58.3",
     "superjson": "1.9.1",
-    "zod": "^3.20.2"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.14.1",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.30.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.34.0",
     "eslint-config-next": "13.1.1",
-    "postcss": "^8.4.14",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.4"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.0.0"
