--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "framer-motion": "^8.5.5",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
+    "i18next": "^22.4.11",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "markdown-to-jsx": "^7.1.9",
     "next": "13.1.1",
     "react": "18.2.0",
