--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "update": "next update"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
     "@prisma/client": "^4.10.1",
     "@tanstack/react-query": "^4.24.10",
     "@trpc/client": "^10.12.0",
