feat: add list of services

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^8.5.5",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.11.5",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
