--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
     "@prisma/client": "^4.10.1",
+    "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.24.10",
     "@trpc/client": "^10.12.0",
     "@trpc/next": "^10.12.0",
