--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "update": "next update"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
     "@geist-ui/core": "^2.3.8",
     "@prisma/client": "^4.10.1",
     "@sendgrid/mail": "^7.7.0",
@@ -24,9 +25,11 @@
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.5",
+    "gsap-trial": "^3.11.5",
     "markdown-to-jsx": "^7.1.9",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
