--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "next lint",
     "start": "next start",
     "clean": "rm -rf .next",
-    "update": "next update"
+    "update": "next update",
+    "sitemap": "next-sitemap --next-sitemap.config.js"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -48,6 +49,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "eslint-config-next": "13.1.1",
+    "next-sitemap": "^4.0.6",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
