--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gsap": "^3.11.5",
     "gsap-trial": "^3.11.5",
     "markdown-to-jsx": "^7.1.9",
-    "next": "13.1.1",
+    "next": "^13.2.4",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
