--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
-  "name": "portfolio-v2",
-  "version": "0.1.0",
+  "name": "portfolio",
+  "version": "1.0.0",
   "private": true,
+  "author": {
+    "name": "Enzo Mourany",
+    "email": "enzo.mourany@outlook.com"
+  },
+  "keywords": [
+    "next",
+    "next.js",
+    "nextjs",
+    "react",
+    "typescript",
+    "tailwindcss",
+    "portfolio"
+  ],
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -31,9 +44,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
-    "sass": "^1.58.3",
-    "superjson": "1.9.1",
-    "zod": "^3.20.6"
+    "sass": "^1.58.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
