--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "framer-motion": "^8.5.5",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.11.5",
     "markdown-to-jsx": "^7.1.9",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "splitting": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
