--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.5",
+    "js-cookie": "^3.0.1",
     "markdown-to-jsx": "^7.1.9",
     "next": "^13.3.0",
     "react": "18.2.0",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^18.14.1",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
